*test fixing prettyPhoto on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -964,7 +964,7 @@ ul.nostyle i {
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 500px) {
   .preview {
-    width: 100%;
+    width: 150px;
 /*     height: 36px; */
   }
 }
